# fsc_autopilot

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  package.xml
cfg/: TrackingControl.cfg
config/: params.json
fsc_autopilot/: CMakeLists.txt  package.xml
fsc_autopilot/cmake/: install_config.cmake.in  install_rules.cmake
fsc_autopilot/modules/: CMakeLists.txt
fsc_autopilot/modules/attitude_control/: CMakeLists.txt  CPPLINT.cfg
fsc_autopilot/modules/attitude_control/include/fsc_autopilot/attitude_control/: apm_attitude_controller.hpp  attitude_control_error.hpp  attitude_controller_base.hpp  attitude_controller_factory.hpp  control.hpp  nonlinear_geometric_controller.hpp  px4_attitude_controller.hpp
fsc_autopilot/modules/attitude_control/src/: apm_attitude_controller.cpp  attitude_controller_factory.cpp  nonlinear_geometric_controller.cpp  px4_attitude_controller.cpp
fsc_autopilot/modules/core/: CMakeLists.txt
fsc_autopilot/modules/core/include/fsc_autopilot/core/: asserts.hpp  controller_base.hpp  definitions.hpp  factory_support.hpp  logger_base.hpp  meta.hpp  parameter_base.hpp  vehicle_input.hpp  vehicle_model.hpp
fsc_autopilot/modules/core/src/: logger_base.cpp  vehicle_model.cpp
fsc_autopilot/modules/estimator/: CMakeLists.txt
fsc_autopilot/modules/estimator/include/fsc_autopilot/estimator/: estimator_base.hpp  ins10.hpp
fsc_autopilot/modules/estimator/src/: ins10.cpp
fsc_autopilot/modules/lqg/: CMakeLists.txt
fsc_autopilot/modules/lqg/include/fsc_autopilot/lqg/: lqg_base.hpp  lqg_factory.hpp  ude_base.hpp  ude_factory.hpp  velocity_based_lqg.hpp
fsc_autopilot/modules/lqg/src/: lqg_base.cpp  lqg_factory.cpp  velocity_based_lqg.cpp  velocity_based_ude.cpp
fsc_autopilot/modules/math/: CMakeLists.txt
fsc_autopilot/modules/math/include/fsc_autopilot/math/: low_pass_filter.hpp  math_extras.hpp  numbers.hpp  polynomial.hpp  rotation.hpp
fsc_autopilot/modules/math/tests/: CMakeLists.txt
fsc_autopilot/modules/position_control/: CMakeLists.txt
fsc_autopilot/modules/position_control/docs/: README.tex
fsc_autopilot/modules/position_control/include/fsc_autopilot/position_control/: control.hpp  lqg_controller.hpp  pd_controller.hpp  pid_controller.hpp  position_controller_base.hpp  position_controller_factory.hpp  robust_controller.hpp  tracking_controller.hpp
fsc_autopilot/modules/position_control/python/: README.md  trajectories.py  trajectory_generation.py
fsc_autopilot/modules/position_control/src/: lqg_controller.cpp  pd_controller.cpp  pid_controller.cpp  position_controller_factory.cpp  robust_controller.cpp  tracking_controller.cpp
fsc_autopilot/modules/ude/: CMakeLists.txt
fsc_autopilot/modules/ude/include/fsc_autopilot/ude/: accel_based_ude.hpp  ude_base.hpp  ude_factory.hpp  velocity_based_ude.hpp
fsc_autopilot/modules/ude/src/: accel_based_ude.cpp  ude_base.cpp  ude_factory.cpp  velocity_based_ude.cpp
fsc_autopilot/modules/utils/: CMakeLists.txt
fsc_autopilot/modules/utils/include/fsc_autopilot/utils/: asserts.hpp  meta.hpp
fsc_autopilot/tests/: CMakeLists.txt
fsc_autopilot/tests/src/: test_angles.cpp  test_isclose.cpp  test_polynomial.cpp  test_rotation.cpp
fsc_autopilot_ros/: CMakeLists.txt  package.xml
fsc_autopilot_ros/cfg/: TrackingControl.cfg
fsc_autopilot_ros/fsc_autopilot_msgs/: CMakeLists.txt  package.xml
fsc_autopilot_ros/fsc_autopilot_msgs/msg/: AttitudeControllerState.msg  PositionControllerReference.msg  PositionControllerState.msg
fsc_autopilot_ros/fsc_autopilot_ros/: CMakeLists.txt  package.xml
fsc_autopilot_ros/fsc_autopilot_ros/cfg/: TrackingControl.cfg
fsc_autopilot_ros/fsc_autopilot_ros/include/fsc_autopilot_ros/: autopilot_client.hpp  msg_conversion.hpp  ros_support.hpp
fsc_autopilot_ros/fsc_autopilot_ros/launch/: autopilot.launch
fsc_autopilot_ros/fsc_autopilot_ros/params/: F450_params.json  T15_params.json  apm_sitl_params.json  gazebo_iris_params.json
fsc_autopilot_ros/fsc_autopilot_ros/src/: autopilot_client.cpp  autopilot_node.cpp  ros_support.cpp
fsc_autopilot_ros/include/fsc_autopilot_ros/: autopilot_client.hpp  msg_conversion.hpp  ros_support.hpp
fsc_autopilot_ros/launch/: autopilot.launch  tracking_control.launch
fsc_autopilot_ros/msg/: TrackingError.msg
fsc_autopilot_ros/params/: params.json
fsc_autopilot_ros/src/: autopilot_client.cpp  autopilot_node.cpp  ros_support.cpp
fsc_autopilot_ros2/: CMakeLists.txt  package.xml
fsc_autopilot_ros2/fsc_autopilot_msgs/: CMakeLists.txt  package.xml
fsc_autopilot_ros2/fsc_autopilot_msgs/msg/: TrackingError.msg  TrackingReference.msg
fsc_autopilot_ros2/fsc_autopilot_ros2/: CMakeLists.txt  package.xml
fsc_autopilot_ros2/fsc_autopilot_ros2/include/fsc_autopilot_ros2/: autopilot_client.hpp  msg_conversion.hpp  ros2_support.hpp
fsc_autopilot_ros2/fsc_autopilot_ros2/launch/: autopilot.launch
fsc_autopilot_ros2/fsc_autopilot_ros2/params/: params.json
fsc_autopilot_ros2/fsc_autopilot_ros2/src/: autopilot_client.cpp  autopilot_node.cpp  ros2_support.cpp
fsc_autopilot_ros2/include/fsc_autopilot_ros/: autopilot_client.hpp  msg_conversion.hpp  ros_support.hpp
fsc_autopilot_ros2/msg/: TrackingError.msg  UDEState.msg
fsc_autopilot_ros2/src/: autopilot_client.cpp  autopilot_node.cpp  ros_support.cpp
include/override_set_home/: CMakeLists.txt  package.xml
include/tracking_control/: acceleration_setpoint_shaping.hpp  apm_attitude_controller.hpp  control.hpp  controller_base.hpp  definitions.hpp  logging.hpp  math.hpp  msg_conversion.hpp  (+8 more)
launch/: tracking_control.launch
msg/: Tracking.msg  TrackingError.msg  UDEState.msg
python/: demo_controller.py  geometric_controller.py
src/: accel_based_multirotor_ude.cpp  accel_based_ude.cpp  apm_attitude_controller.cpp  logger_base.cpp  logging.cpp  multirotor_ude.cpp  nonlinear_geometric_controller.cpp  ros_support.cpp  set_home_node.cpp  tracking_control_client.cpp  tracking_control_node.cpp  tracking_controller.cpp  ude_base.cpp  ude_factory.cpp  utils.cpp  velocity_based_multirotor_ude.cpp  velocity_based_ude.cpp
(+12 files in other folders)
