<?xml version="1.0"?>
<package>
  <name>fsc_autopilot_full</name>
  <version>0.0.0</version>
  <description>The full (meta) package that builds both fsc_autopilot and fsc_autopilot_ros</description>
  <maintainer email="hellston20a@gmail.com">Hs293Go</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
