<?xml version="1.0"?>
<package>
  <name>fsc_autopilot_ros2</name>
  <version>0.0.0</version>
  <description>Tracking Control</description>
  <maintainer email="hellston20a@gmail.com">Hs293Go</maintainer>

  <license>MIT</license>

  <build_depend>dynamic_reconfigure</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros2cpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>mavros2</build_depend>
  <build_depend>mavros2_msgs</build_depend>
  <build_depend>fsc_autopilot</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>ros2cpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2_eigen</run_depend>
  <run_depend>mavros2</run_depend>
  <run_depend>mavros2_msgs</run_depend>
  <run_depend>fsc_autopilot</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
