<?xml version="1.0"?>
<package>
  <name>fsc_autopilot_ros</name>
  <version>0.3.0</version>
  <description>Tracking Control</description>
  <maintainer email="hellston20a@gmail.com">Hs293Go</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>fsc_autopilot</build_depend>
  <build_depend>fsc_autopilot_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2_eigen</run_depend>
  <run_depend>mavros</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>fsc_autopilot</run_depend>
  <run_depend>fsc_autopilot_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
