<?xml version="1.0"?>
<package format="3">
  <name>fsc_autopilot_msgs</name>
  <version>0.0.0</version>
  <description>FSC Autopilot Messages</description>
  <maintainer email="hellston20a@gmail.com">Hs293Go</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
